tests/csmith/bad/smith000873.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 873
 * Seed:      873
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
/* --- GLOBAL VARIABLES --- */
 volatile uint32_t g_9 = 0xC5416513L;/* VOLATILE GLOBAL g_9 */
uint64_t g_10[1] = {0xD72276B87D0FA516LL};
int32_t * volatile g_17 = 0;/* VOLATILE GLOBAL g_17 */
int32_t g_19 = 0x3E75CB55L;


/* --- FORWARD DECLARATIONS --- */
uint16_t  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_9 g_10 g_19
 * writes: g_19
 */
uint16_t  func_1(void)
{ /* block id: 0 */
    int64_t l_2 = 7L;
    int32_t *l_18 = &g_19;
    (*l_18) = (l_2 || ((safe_lshift_func_uint8_t_u_u((safe_lshift_func_uint8_t_u_u((safe_add_func_uint16_t_u_u((g_9 != l_2), g_10[0])), ((safe_lshift_func_int8_t_s_s(l_2, -6L)) | g_10[0]))), 0xCE4A6F44L)) == ((safe_mul_func_int16_t_s_s(g_10[0], (safe_mul_func_uint8_t_u_u(l_2, 6L)))) && l_2)));
    return (*l_18);
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    int i;
    func_1();
    printf("checksum g_9 = %d\n", g_9);
    printf("checksum g_10[0] = %d\n", g_10[0]);
    printf("checksum g_10[0] = %d\n", g_10[0]);
    printf("checksum g_19 = %d\n", g_19);
}

/************************ statistics *************************
XXX max struct depth: 0
breakdown:
   depth: 0, occurrence: 6

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 2

XXX total number of pointers: 2

XXX times a variable address is taken: 1
XXX times a pointer is dereferenced on RHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is dereferenced on LHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 1

XXX max dereference level: 1
breakdown:
   level: 0, occurrence: 0
   level: 1, occurrence: 3
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 2
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 50
XXX average alias set size: 1

XXX times a non-volatile is read: 10
XXX times a non-volatile is write: 2
XXX times a volatile is read: 1
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 0
XXX percentage of non-volatile access: 92.3

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 3

XXX percentage a fresh-made variable is used: 30
XXX percentage an existing variable is used: 70
********************* end of statistics **********************/

